--- a/Lab5-1.ipynb
+++ b/Lab5-1.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 107,
    "id": "538e872f",
    "metadata": {
     "ExecuteTime": {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "id": "24f89312",
    "metadata": {
     "ExecuteTime": {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 108,
    "id": "997af7e4",
    "metadata": {
     "ExecuteTime": {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 109,
    "id": "8684a31f",
    "metadata": {
     "ExecuteTime": {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "id": "74ee67dd",
    "metadata": {
     "ExecuteTime": {
@@ -352,16 +352,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\50250\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -384,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "id": "212a047b",
    "metadata": {
     "ExecuteTime": {
@@ -490,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 112,
    "id": "38ad0a90",
    "metadata": {
     "ExecuteTime": {
@@ -518,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 113,
    "id": "295ab0f6",
    "metadata": {
     "ExecuteTime": {
@@ -549,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "id": "bd4e399c",
    "metadata": {
     "ExecuteTime": {
@@ -587,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 115,
    "id": "296c9699",
    "metadata": {
     "ExecuteTime": {
@@ -623,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 116,
    "id": "73ac6565",
    "metadata": {
     "ExecuteTime": {
@@ -651,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 117,
    "id": "c6eec833",
    "metadata": {
     "ExecuteTime": {
@@ -688,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 118,
    "id": "545965f3",
    "metadata": {
     "ExecuteTime": {
@@ -761,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "b3b8ea3c",
    "metadata": {
     "ExecuteTime": {
@@ -797,10 +788,8 @@
     "        self.device = device\n",
     "        \n",
     "        # Aprox 2 lineas para\n",
-    "        # self.tok_embedding =\n",
-    "        # self.pos_embedding =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.tok_embedding = nn.Embedding(input_dim, hid_dim)\n",
+    "        self.pos_embedding = nn.Embedding(max_length, hid_dim)\n",
     "        \n",
     "        self.layers = nn.ModuleList([EncoderLayer(hid_dim, \n",
     "                                                  n_heads, \n",
@@ -810,10 +799,8 @@
     "                                     for _ in range(n_layers)])\n",
     "        \n",
     "        # Aprox 1 linea para\n",
-    "        # self.dropout =\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        # Hint: Use el valor para dropout dado en la firma del constructor\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        self.scale = torch.sqrt(torch.FloatTensor([hid_dim])).to(device)\n",
     "        \n",
@@ -824,10 +811,8 @@
     "        #src_mask = [batch size, 1, 1, src len]\n",
     "        \n",
     "        # Aprox 2 lineas para\n",
-    "        # batch_size =\n",
-    "        # src_len = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        batch_size = src.size(0)\n",
+    "        src_len = src.size(1)\n",
     "        \n",
     "        pos = torch.arange(0, src_len).unsqueeze(0).repeat(batch_size, 1).to(self.device)\n",
     "        \n",
@@ -862,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "588ffd28",
    "metadata": {
     "ExecuteTime": {
@@ -894,10 +879,9 @@
     "        \n",
     "        \n",
     "        # Aprox 2 lineas para\n",
-    "        # self.self_attn_layer_norm =\n",
-    "        # self.ff_layer_norm =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.self_attn_layer_norm = nn.LayerNorm(hid_dim)\n",
+    "        self.ff_layer_norm = nn.LayerNorm(hid_dim)\n",
+    "\n",
     "        self.self_attention = MultiHeadAttentionLayer(hid_dim, n_heads, dropout, device)\n",
     "        self.positionwise_feedforward = PositionwiseFeedforwardLayer(hid_dim, \n",
     "                                                                     pf_dim, \n",
@@ -910,9 +894,7 @@
     "        #src_mask = [batch size, 1, 1, src len] \n",
     "                \n",
     "        # Aprox 1 lineas para self attention\n",
-    "        # _src, _ =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        _src, _ = self.self_attention(src, src, src, src_mask)\n",
     "        \n",
     "        #dropout, residual connection y layer norm\n",
     "        src = self.self_attn_layer_norm(src + self.dropout(_src))\n",
@@ -979,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "fffed515",
    "metadata": {
     "ExecuteTime": {
@@ -1011,13 +993,11 @@
     "        self.head_dim = hid_dim // n_heads\n",
     "        \n",
     "        # Aprox 4 lineas para\n",
-    "        # self.fc_q = \n",
-    "        # self.fc_k =\n",
-    "        # self.fc_v =\n",
-    "        # self.fc_o =\n",
+    "        self.fc_q = nn.Linear(hid_dim, hid_dim)\n",
+    "        self.fc_k = nn.Linear(hid_dim, hid_dim)\n",
+    "        self.fc_v = nn.Linear(hid_dim, hid_dim)\n",
+    "        self.fc_o = nn.Linear(hid_dim, hid_dim)\n",
     "        # Hint: Probablemente necesite nn.Linear\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
@@ -1041,11 +1021,9 @@
     "                \n",
     "        Q = Q.view(batch_size, -1, self.n_heads, self.head_dim).permute(0, 2, 1, 3)\n",
     "        # Aproximadamente 2 lineas para\n",
-    "        # K =\n",
-    "        # V =\n",
-    "        # Hint: Probablemente necesite el metodo .view y .permute\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        K = K.view(batch_size, -1, self.n_heads, self.head_dim).permute(0, 2, 1, 3)\n",
+    "        V = V.view(batch_size, -1, self.n_heads, self.head_dim).permute(0, 2, 1, 3)\n",
+    "        # Hint: Probablemente necesite el metodo .view y .permute)\n",
     "        #Q = [batch size, n heads, query len, head dim]\n",
     "        #K = [batch size, n heads, key len, head dim]\n",
     "        #V = [batch size, n heads, value len, head dim]\n",
@@ -1108,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "59ac6987",
    "metadata": {
     "ExecuteTime": {
@@ -1134,12 +1112,10 @@
     "        super().__init__()\n",
     "        \n",
     "        # Aprox 2 lineas para\n",
-    "        # self.fc_1 = \n",
-    "        # self.fc_2 = \n",
+    "        self.fc_1 = nn.Linear(hid_dim, pf_dim)\n",
+    "        self.fc_2 = nn.Linear(pf_dim, hid_dim)\n",
     "        # Hint: hid_dim y pf_dim\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -1196,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "fdfe1425",
    "metadata": {
     "ExecuteTime": {
@@ -1232,20 +1208,14 @@
     "        self.device = device\n",
     "        \n",
     "        # Aprox 2 lineas para\n",
-    "        # self.tok_embedding =\n",
-    "        # self.pos_embedding = \n",
+    "        self.tok_embedding = nn.Embedding(output_dim, hid_dim)\n",
+    "        self.pos_embedding = nn.Embedding(max_length, hid_dim)\n",
     "        # Hint: output_dim y hid_dim\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
-    "        \n",
     "        self.layers = nn.ModuleList()\n",
     "        for _ in range(n_layers):\n",
     "            # Aprox 1 linea para \n",
-    "            # layer = \n",
-    "            # Hint: DecoderLayer\n",
-    "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            layer = DecoderLayer(hid_dim, n_heads, pf_dim, dropout, device)\n",
     "            self.layers.append(layer)\n",
     "        \n",
     "        self.fc_out = nn.Linear(hid_dim, output_dim)\n",
@@ -1272,10 +1242,7 @@
     "        \n",
     "        for layer in self.layers:\n",
     "            # Aprox 1 linea para\n",
-    "            # trg, attetiont = \n",
-    "            # Hint: use layer(...)\n",
-    "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            trg, attention = layer(trg, enc_src, trg_mask, src_mask)\n",
     "        \n",
     "        #trg = [batch size, trg len, hid dim]\n",
     "        #attention = [batch size, n heads, trg len, src len]\n",
@@ -1319,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "41988308",
    "metadata": {
     "ExecuteTime": {
@@ -1350,11 +1317,9 @@
     "        super().__init__()\n",
     "        \n",
     "        # Aprox 3 lineas para\n",
-    "        # self.self_attn_layer_norm =\n",
-    "        # self.enc_attn_layer_norm =\n",
-    "        # self.ff_layer_norm = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.self_attn_layer_norm = nn.LayerNorm(hid_dim)\n",
+    "        self.enc_attn_layer_norm = nn.LayerNorm(hid_dim)\n",
+    "        self.ff_layer_norm = nn.LayerNorm(hid_dim)\n",
     "        self.self_attention = MultiHeadAttentionLayer(hid_dim, n_heads, dropout, device)\n",
     "        self.encoder_attention = MultiHeadAttentionLayer(hid_dim, n_heads, dropout, device)\n",
     "        self.positionwise_feedforward = PositionwiseFeedforwardLayer(hid_dim, \n",
@@ -1447,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "8e8787df",
    "metadata": {
     "ExecuteTime": {
@@ -1478,13 +1443,11 @@
     "        super().__init__()\n",
     "        \n",
     "        # Aprox 5 lineas para\n",
-    "        # self.encoder = \n",
-    "        # self.decoder = \n",
-    "        # self.src_pad_idx = \n",
-    "        # self.trg_pad_idx = \n",
-    "        # self.device = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.src_pad_idx = src_pad_idx\n",
+    "        self.trg_pad_idx = trg_pad_idx\n",
+    "        self.device = device\n",
     "        \n",
     "    def make_src_mask(self, src):\n",
     "        \n",
@@ -1571,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "ed46de0a",
    "metadata": {
     "ExecuteTime": {
@@ -1624,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "a14b1f67",
    "metadata": {
     "ExecuteTime": {
@@ -1654,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "ead92980",
    "metadata": {
     "ExecuteTime": {
@@ -1674,7 +1637,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 9,038,597 trainable parameters\n"
+     ]
+    }
+   ],
    "source": [
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
@@ -1684,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "01eb7e83",
    "metadata": {
     "ExecuteTime": {
@@ -1713,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "c52e9af2",
    "metadata": {
     "ExecuteTime": {
@@ -1740,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "b1a1f85c",
    "metadata": {
     "ExecuteTime": {
@@ -1769,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "33640ff5",
    "metadata": {
     "ExecuteTime": {
@@ -1840,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "ad5f59b9",
    "metadata": {
     "ExecuteTime": {
@@ -1882,10 +1853,7 @@
     "        output_dim = output.shape[-1]\n",
     "            \n",
     "        # Aprox 1 linea para\n",
-    "        # output =\n",
-    "        # Hint: Considere usar.contiguos\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        output = output.contiguous().view(-1, output_dim)\n",
     "        trg = trg[:,1:].contiguous().view(-1)\n",
     "                \n",
     "        #output = [batch size * trg len - 1, output dim]\n",
@@ -1927,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "c02fee15",
    "metadata": {
     "ExecuteTime": {
@@ -1984,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "5d8f47eb",
    "metadata": {
     "ExecuteTime": {
@@ -2015,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "36346690",
    "metadata": {
     "ExecuteTime": {
@@ -2034,12 +2002,47 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01 | Time: 1m 56s\n",
+      "\tTrain Loss: 4.242 | Train PPL:  69.574\n",
+      "\t Val. Loss: 3.046 |  Val. PPL:  21.028\n",
+      "Epoch: 02 | Time: 2m 10s\n",
+      "\tTrain Loss: 2.815 | Train PPL:  16.687\n",
+      "\t Val. Loss: 2.302 |  Val. PPL:   9.995\n",
+      "Epoch: 03 | Time: 1m 59s\n",
+      "\tTrain Loss: 2.237 | Train PPL:   9.363\n",
+      "\t Val. Loss: 1.984 |  Val. PPL:   7.275\n",
+      "Epoch: 04 | Time: 1m 56s\n",
+      "\tTrain Loss: 1.889 | Train PPL:   6.615\n",
+      "\t Val. Loss: 1.804 |  Val. PPL:   6.075\n",
+      "Epoch: 05 | Time: 1m 56s\n",
+      "\tTrain Loss: 1.646 | Train PPL:   5.186\n",
+      "\t Val. Loss: 1.708 |  Val. PPL:   5.520\n",
+      "Epoch: 06 | Time: 1m 55s\n",
+      "\tTrain Loss: 1.457 | Train PPL:   4.294\n",
+      "\t Val. Loss: 1.651 |  Val. PPL:   5.211\n",
+      "Epoch: 07 | Time: 1m 52s\n",
+      "\tTrain Loss: 1.305 | Train PPL:   3.687\n",
+      "\t Val. Loss: 1.636 |  Val. PPL:   5.137\n",
+      "Epoch: 08 | Time: 1m 53s\n",
+      "\tTrain Loss: 1.178 | Train PPL:   3.247\n",
+      "\t Val. Loss: 1.626 |  Val. PPL:   5.084\n",
+      "Epoch: 09 | Time: 1m 53s\n",
+      "\tTrain Loss: 1.071 | Train PPL:   2.918\n",
+      "\t Val. Loss: 1.624 |  Val. PPL:   5.075\n",
+      "Epoch: 10 | Time: 1m 54s\n",
+      "\tTrain Loss: 0.975 | Train PPL:   2.652\n",
+      "\t Val. Loss: 1.637 |  Val. PPL:   5.139\n"
+     ]
+    }
+   ],
    "source": [
     "# Una linea para definir el numero de epocas\n",
-    "# N_EPOCHS =\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "N_EPOCHS = 10\n",
     "CLIP = 1\n",
     "\n",
     "best_valid_loss = float('inf')\n",
@@ -2066,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "bb45ec40",
    "metadata": {
     "ExecuteTime": {
@@ -2086,7 +2089,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Test Loss: 1.689 | Test PPL:   5.415 |\n"
+     ]
+    }
+   ],
    "source": [
     "model.load_state_dict(torch.load('tut6-model.pt'))\n",
     "\n",
@@ -2118,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "675f9b85",
    "metadata": {
     "ExecuteTime": {
@@ -2139,7 +2150,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<hr style=\"height:10px;border:none;color:#f00;background-color:#f00;\" />\n",
+       "        <div class=\"alert alert-box alert-danger\">\n",
+       "        <h1> <!--{id:\"WRONGMARK\", marks:\"25\"}--> Test failed ✘ [0/25] marks  </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[106], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m25\u001b[39m):        \n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m compare_numbers(new_representation(test_loss), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3c3d\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0x1.ae147ae147ae1p+0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m25\u001b[39m):        \n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m compare_numbers(new_representation(math\u001b[38;5;241m.\u001b[39mexp(test_loss)), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3c3d\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0x1.570a3d70a3d71p+2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "with tick.marks(25):        \n",
     "    assert compare_numbers(new_representation(test_loss), \"3c3d\", '0x1.ae147ae147ae1p+0')\n",
