--- a/Lab5-1.ipynb
+++ b/Lab5-1.ipynb
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "51e0a1f9",
    "metadata": {},
    "outputs": [
@@ -3233,12 +3233,44 @@
    "source": [
     "**PREGUNTAS:** Responda las siguintes preguntas en este espacio (10% de la nota)\n",
     "* ¿Cómo afecta la cantidad de parámetros del modelo? ¿Qué nos dicen eso 9M de parametros del modelo que hemos creado?\n",
+    "\n",
+    "La cantidad de parametros entrenables del modelo afecta directamente el tiempo de entrenamiento, pues expande directamente los pasos de calculo de gradiente y actualizacion de estos mismos. Asimismo, en esta clase de modelos, los parametros pueden estar relacionados a un QKV para cada palabra en nuestro diccionario de seq2seq. Es decir, se relacionan con la complegidad de nuestro lenguaje, y mas parametros indica una mejor atencion y subsecuente interpretacion de oraciones. En comparacion con LLMs que cuentan con cientos de billones de parametros, lo que tenemos es un modelo mediano que se puede adptar bien a tareas mas simples como traduccion o resumenes.\n",
+    "\n",
+    "\n",
     "* ¿Qué hace el algoritmo de inicialización de Xavier Uniform?\n",
+    "\n",
+    "El algoritmo de Xavier Uniform comprende una ditribucion aleatoria uniforme utilizada para la generacion de valores iniciales para los pesos y biases de nuestro modelo. Dada una cantidad de neuronas de entrada y salida, Xavier Uniform obtiene un peso similar a la raiz del inverso de sus sumas a=sqrt(6/fanin​+fanout​). Luego genera los pesos iniciales como una distribucion uniforme en el rango [-a,a].\n",
+    "Este algoritmo cumple ciertas condiciones que otros metodos de generacion no necesariamente alcanzan. Entre estas estan mantener una varianza estable de los parametros entre capas y evitar gradientes de fuga.\n",
+    "\n",
     "* ¿Qué hace el comando torch.no_grad()?\n",
+    "\n",
+    "Torch.no_grad() es un manejador de contexto dentro de las librerias de torch. Basicamente, hace que el motor autograd no gaste memoria rastreando la operaciones del calculo de gradientes detro de un bloque de codigo establecido. Su uso yace en evaluaciones o inferencia, donde no se requiere de que nuestro modelo mantenga registro de los gradientes. En estos casos puede llevar a optimizaciones del uso de memoria y tiempo de ejecucion.\n",
+    "\n",
+    "\n",
     "* Interprete el valor obtenido para el BLEU score ¿es nuestro modelo un buen modelo?\n",
+    "\n",
+    "El valor BLEU (Bilingual Evaluation Understudy) es una metrica entre 0 y 100 que mide similitud entre las traducciones predichas y de validacion para modelos de traduccion. Un valor de 0 significa que la secuencia predicha no tiene nada que ver con la de referencia, y una metrica de 100 implica que son identicas. Generalmente valores de 40 para arriba implican un modelo con nivel profesional de traduccion, y un valor entre 30 y 40 (donde cae nuestro nodel) indica una buena traduccion, comprensiva y cercana a la referencia. Es decir, nuestro modelo es bueno para traducir, talvez no a nivel profesional, pero muy comprensible.\n",
+    "\n",
+    "\n",
     "* ¿Qué puede observar de las palabras donde el modelo se ha confundido?\n",
+    "\n",
+    "Voy a tomar como ejemplo la traduccion del juego de baseball, pues en este se pueden ver unos comportamientos interesantes<br>\n",
+    "<b>TARGET</b>:    a young boy wearing a giants jersey swings a baseball bat at an incoming pitch.<br>\n",
+    "<b>PREDICTED</b>: a young boy wearing a ```<unk>``` cap swings a baseball bat towards a ball coming towards an opponent.```<eos>```<br>\n",
+    "\n",
+    "Hay 2 cosas que me gustaria mencionar sobre las confusiones del modelo\n",
+    "1. La mas obvia, la tag ```<unk>```. Segun la oracion inicial, se indica que el niño tiene puesta una camisa de los \"giants\" el cual es un equipo de baseball. Sin embargo, parece que el modelo fallo en identificar a que se referia este nombre y fue incapaz de traducirlo como nombre ligeral, asimismo, desupes parece que en lugar de decirq ue el niño tiene una camisola de un equipo, termina diciendo que el niño tiene una gorra de algo desconocido\n",
+    "2. Traduccion literal de \"pitch\" en baseball, se usa la palabra pitch para denominar la accion de tirar una bola para que alguien mas la batee. Entonces, parece que en lugar de traducir de que el niño va a batir el tiro, tradujo una descripcion de que es un pitch, incluso usando la palabra \"oponent\" cuando realmente no es necesaria en este contexto\n",
+    "\n",
+    "\n",
     "* Observe el comportamiento de la pérdida y PPL en training y validation mientras se entrega el modelo, ¿qué puede decir de estos valores?\n",
-    "* Si bien no es una tarea intuitiva o sencilla la interpretación de las gráficas de attention que hemos realizado, intente darle una interpretación a la última de estas gráficas mostrada. ¿Qué tipo de insights podría sacar de esta gráfica?"
+    "\n",
+    "\n",
+    "La perdida y perplexity en entrenamiento tuvo un comportamiento progresivo. Es decir, durante las primeras 8 epocas hubieron mejoras constantes aunque progresivamente mas pequeñas, pero eso es de esperar. Lo unico que cabe notar aqui es que hubo un estancamiento en las metricas de validacion a partir de la epoca 6, lo que podria indicar overfitting. Sin embargo, la perdida y ppl en testing fue bastante buena, en el sentido de que conicidio bastante bien con las metricas de entrenamiento de la ulitmas epocas. Asimismo, se investigo al respecto y un ppl de 5.4 y un belu de 36 nos indican que nuestro modelo es bastante solido en la traduccion, pero que todavia hay espacio de mejora.\n",
+    "\n",
+    "* Si bien no es una tarea intuitiva o sencilla la interpretación de las gráficas de attention que hemos realizado, intente darle una interpretación a la última de estas gráficas mostrada. ¿Qué tipo de insights podría sacar de esta gráfica?\n",
+    "\n",
+    "En la ultima grafica, me parece muy interesenate que la atencion logro tomar una forma de diagonal, relacionando palabras en ingles y aleman que tienen traudcciones casi directas. como \"Mother\" y \"Mutter\" y \"a\" con \"ein(e)\" y asi. Asimismo, esta interesante que hay un poco de confusion para la traduccion de hijo, pues en aleman se activa \"kleiner\" y \"sohn\" mientras la ultima es traduccion directa de hijo, la primera tiene una traduccion similar a \"el pequeño\" lo que tambien en ciertos contextos podria referir a un hijo. Esto es muy intereseante. Por ultimo tambien es interesante como hay poca confianza en las ultimas palabras de la oracion. En mi perspectiva limitada, se me ocurre decir que podria ser porque hay una gran varidad de expresar oraciones incluso cuando se sabe que se tiene que decir, por ejemplo oraciones como \"una linda tarda afuera\" p \"afuera hay una tarde linda\" tienen significados identicos y hacen referencia a la misma cosa, pero para un modelo puede ser dificil decidir cual sera la mas apropiada para una oracion de entrada."
    ]
   },
   {
